feat: sistema multi-tenant completo com autenticação

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,17 @@ BASE_URL=http://localhost:3000
 
 # Ambiente (development ou production)
 NODE_ENV=development
+
+# ====== SEGURANÇA (IMPORTANTE PARA PRODUÇÃO!) ======
+
+# Secret para JWT (TROQUE em produção!)
+# Gere com: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=whatsapp-dispatcher-secret-key-change-in-production
+
+# Secret para sessões (TROQUE em produção!)
+# Gere com: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_SECRET=whatsapp-dispatcher-session-secret
+
+# CORS Origins (separados por vírgula)
+# Em produção: https://seu-app.railway.app,https://seu-dominio.com
+CORS_ORIGIN=http://localhost:3000
