--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server.js",
+    "cli": "node src/index.js",
     "client": "node src/client.js",
     "web": "node src/server.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "create-admin": "node src/scripts/createAdmin.js",
+    "migrate": "node src/scripts/migrateToMultiTenant.js"
   },
   "keywords": [
     "whatsapp",
@@ -29,6 +32,11 @@
     "xlsx": "^0.18.5",
     "csv-parser": "^3.0.0",
     "socket.io": "^4.6.1",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.18.0",
+    "better-sqlite3": "^9.4.3",
+    "cookie-parser": "^1.4.6"
   }
 }
