--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "express-session": "^1.18.0",
     "better-sqlite3": "^9.4.3",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "pg": "^8.11.3"
   }
 }
