--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "express-session": "^1.18.0",
     "better-sqlite3": "^9.4.3",
     "cookie-parser": "^1.4.6",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0"
   }
 }
