rebrand: renomear Nexus Disparador para Vext
MUDANÇAS:
- Nome do projeto: Nexus Disparador → Vext
- Título do site e login page
- Nome do package.json
- Firebase project IDs (vext-9b811)
- Guia de uso e documentação
- Todos os headers e footers da UI

OBJETIVO:
- Identidade mais simples e moderna
- Nome mais fácil de lembrar (Vext)
- Evitar detecção de 'Disparador' como bot pelo WhatsApp

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatsapp-multi-sender",
+  "name": "vext",
   "version": "1.0.0",
-  "description": "Ferramenta de disparo de WhatsApp com múltiplas sessões e alternância de mensagens",
+  "description": "Vext - Sistema de disparo de WhatsApp com múltiplas sessões e alternância de mensagens",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
