``` feat: adicionar sistema de administração multi-tenant com templates e agendamentos
MUDANÇAS PRINCIPAIS:

1. Sistema de Administração:
   - Variável ADMIN_EMAILS no .env para controle de acesso
   - Limite de instâncias por usuário (padrão: 3)
   - Validação de permissões admin no backend

2. Templates de Mensagens:
   - CRUD completo de templates reutilizáveis
   - Categorias (geral, vendas, suporte, marketing)
   - Variáveis dinâmicas com {{placeholder}}
   - Contador de uso

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,9 @@ SESSION_SECRET=whatsapp-dispatcher-session-secret
 # CORS Origins (separados por vírgula)
 # Em produção: https://seu-app.railway.app,https://seu-dominio.com
 CORS_ORIGIN=http://localhost:3000
+
+# ====== ADMINISTRAÇÃO ======
+
+# Emails de administradores (separados por vírgula)
+# Esses usuários terão acesso ao painel de gestão em /admin.html
+ADMIN_EMAILS=admin@vext.com
