--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Dependencies
 node_modules/
 yarn.lock
+package-lock.json
 
 # Environment variables
 .env
+.env.local
+.env.production
+.env*.local
 
 # Logs
 *.log
