--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,36 @@
+# Render Blueprint - Vext WhatsApp Dispatcher
+# Documentação: https://render.com/docs/blueprint-spec
+
+databases:
+  - name: vext-db
+    databaseName: vext
+    user: vext
+    plan: free
+
 services:
   - type: web
-    name: whatsapp-disparador
+    name: vext-whatsapp
     env: node
+    plan: free
     buildCommand: npm install
-    startCommand: npm run web
+    startCommand: npm start
+    healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
         value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: vext-db
+          property: connectionString
+      - key: JWT_SECRET
+        generateValue: true
+      - key: SESSION_SECRET
+        generateValue: true
       - key: MESSAGE_DELAY
         value: 3000
       - key: NUMBER_DELAY
         value: 5000
       - key: ROTATION_MODE
         value: sequential
+      - key: ADMIN_EMAILS
+        sync: false  # Configure manualmente no dashboard do Render
