``` chore: atualizar dependências Firebase e substituir xlsx por ExcelJS
MUDANÇAS PRINCIPAIS:

1. Atualização de Dependências:
   - firebase: 10.7.1 → 12.6.0
   - firebase-admin: 12.0.0 → 13.6.0
   - multer: 1.4.5-lts.1 → 2.0.2
   - Substituir xlsx por exceljs (4.4.0)

2. Configuração Firebase:
   - Adicionar FIREBASE_PROJECT_ID no .env.example
   - Configurar project ID no render.yaml
   - Melhorar inicialização do Firebase Admin com fallbacks

3. CORS Melhorado:
   - Permitir sub

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,12 @@ SESSION_SECRET=whatsapp-dispatcher-session-secret
 # Em produção: https://seu-app.railway.app,https://seu-dominio.com
 CORS_ORIGIN=http://localhost:3000
 
+# ====== FIREBASE ======
+
+# Project ID do Firebase (obrigatório para autenticação)
+# Pegue em: Firebase Console → Project Settings → General → Project ID
+FIREBASE_PROJECT_ID=vext-9b811
+
 # ====== ADMINISTRAÇÃO ======
 
 # Emails de administradores (separados por vírgula)
