--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.0",
-    "firebase": "^10.7.1",
-    "firebase-admin": "^12.0.0",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "socket.io": "^4.6.1",
-    "xlsx": "^0.18.5"
+    "socket.io": "^4.6.1"
   }
 }
