``` chore: reverter rebrand Vext para Nexus e adicionar suporte PostgreSQL completo
MUDANÇAS PRINCIPAIS:

1. Reverter Rebrand:
   - Firebase project ID: vext-9b811 → nexus-9b811
   - Atualizar authDomain e storageBucket
   - Configurar FIREBASE_PROJECT_ID no render.yaml

2. PostgreSQL - Templates de Mensagens:
   - Migrar getTemplates() para suportar Postgres ($1, $2)
   - Migrar CRUD completo (create, update, delete)
   - Converter JSON.stringify para ambos bancos
   - Usar RETURNING * no Postgres (

--- a/render.yaml
+++ b/render.yaml
@@ -27,7 +27,7 @@ services:
       - key: SESSION_SECRET
         generateValue: true
       - key: FIREBASE_PROJECT_ID
-        value: vext-9b811
+        value: nexus-9b811
       - key: MESSAGE_DELAY
         value: 3000
       - key: NUMBER_DELAY
