--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@whiskeysockets/baileys": "^6.7.21",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^9.4.3",
+    "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
