--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "license": "ISC",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.21",
-    "bcrypt": "^5.1.1",
-    "better-sqlite3": "^9.4.3",
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.6.0",
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -40,7 +40,7 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.0",
