``` feat: adicionar autenticação WebSocket, melhorias UX e documentação de deploy
MUDANÇAS PRINCIPAIS:

1. Segurança WebSocket:
   - Adicionar autenticação Socket.IO com Firebase token
   - Logs de debug para conexão/desconexão/erros
   - Validar token antes de aceitar conexões

2. Dependências:
   - express-validator: 7.3.1 (validação de inputs)
   - helmet: 8.1.0 (headers de segurança)

3. UX Melhorias (app.js):
   - Modal bonito para criar campanhas
   - Preview WhatsApp em tempo real
   - Console

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,13 @@ BASE_URL=http://localhost:3000
 # Ambiente (development ou production)
 NODE_ENV=development
 
+# ====== BANCO DE DADOS (OBRIGATÓRIO PARA PRODUÇÃO) ======
+
+# URL de conexão PostgreSQL (Railway fornece automaticamente)
+# Formato: postgresql://usuario:senha@host:porta/database
+# No Railway: vai para Variables e copie DATABASE_URL do serviço PostgreSQL
+# DATABASE_URL=postgresql://postgres:senha@host:5432/railway
+
 # ====== SEGURANÇA (IMPORTANTE PARA PRODUÇÃO!) ======
 
 # Secret para JWT (TROQUE em produção!)
@@ -33,16 +40,25 @@ SESSION_SECRET=whatsapp-dispatcher-session-secret
 
 # CORS Origins (separados por vírgula)
 # Em produção: https://seu-app.railway.app,https://seu-dominio.com
+# IMPORTANTE: Especifique TODOS os domínios permitidos explicitamente
 CORS_ORIGIN=http://localhost:3000
 
-# ====== FIREBASE ======
+# ====== FIREBASE (OBRIGATÓRIO PARA AUTENTICAÇÃO) ======
 
 # Project ID do Firebase (obrigatório para autenticação)
 # Pegue em: Firebase Console → Project Settings → General → Project ID
-FIREBASE_PROJECT_ID=vext-9b811
+FIREBASE_PROJECT_ID=seu-projeto-firebase
+
+# Credenciais do Firebase Admin (para produção)
+# Opção 1: Arquivo de credenciais (não recomendado para Railway)
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/serviceAccountKey.json
+
+# Opção 2: Credenciais inline (recomendado para Railway)
+# Cole o conteúdo JSON do serviceAccountKey.json aqui (em uma linha)
+# FIREBASE_ADMIN_CREDENTIALS={"type":"service_account","project_id":"..."}
 
 # ====== ADMINISTRAÇÃO ======
 
 # Emails de administradores (separados por vírgula)
 # Esses usuários terão acesso ao painel de gestão em /admin.html
-ADMIN_EMAILS=admin@vext.com
+ADMIN_EMAILS=admin@seudominio.com
