--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.3.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
