``` feat: integrar Stripe para pagamentos de assinatura e fluxo de checkout
MUDANÇAS:

1. Configuração Stripe (.env.example):
   - Adicionar STRIPE_SECRET_KEY, STRIPE_WEBHOOK_SECRET
   - Adicionar price IDs opcionais dos planos (Start/Pro/Agency)
   - Documentar endpoints e onde obter as chaves

2. Database (database.js):
   - Adicionar colunas: stripe_customer_id, stripe_subscription_id, subscription_status
   - Criar métodos: updateUserStripeCustomer, getUserByStripeCustomer, getPlanByName
   - Adicionar

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,20 @@ FIREBASE_PROJECT_ID=seu-projeto-firebase
 # Emails de administradores (separados por vírgula)
 # Esses usuários terão acesso ao painel de gestão em /admin.html
 ADMIN_EMAILS=admin@seudominio.com
+
+# ====== STRIPE (PAGAMENTOS) ======
+
+# Chave secreta do Stripe (começa com sk_test_ ou sk_live_)
+# Pegue em: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_...
+
+# Chave do webhook do Stripe (começa com whsec_)
+# Pegue em: https://dashboard.stripe.com/webhooks
+# Configure o endpoint: https://seu-app.railway.app/api/stripe/webhook
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Price IDs dos planos (opcional - já tem padrão no código)
+# Pegue em: https://dashboard.stripe.com/products
+# STRIPE_PRICE_START=price_xxx
+# STRIPE_PRICE_PRO=price_xxx
+# STRIPE_PRICE_AGENCY=price_xxx
