--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pino-pretty": "^10.3.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "stripe": "^14.25.0"
   }
 }
