``` feat: integrar Google Gemini AI para geração automática de variações de mensagens
MUDANÇAS:

1. Dependências (package.json):
   - Adicionar @google/generative-ai: ^0.24.1

2. Configuração (.env.example):
   - Adicionar GEMINI_API_KEY para API do Google Gemini
   - Documentar URL de obtenção e limites do plano gratuito

3. Backend (server.js):
   - POST /api/ai/generate-variations: gerar variações com IA
   - GET /api/ai/status: verificar disponibilidade do serviço
   - POST /api/campaign/:

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,13 @@ FIREBASE_PROJECT_ID=seu-projeto-firebase
 # Esses usuários terão acesso ao painel de gestão em /admin.html
 ADMIN_EMAILS=admin@seudominio.com
 
+# ====== GOOGLE GEMINI (IA - GERAÇÃO DE MENSAGENS) ======
+
+# Chave de API do Google Gemini para geração de variações de mensagens
+# Pegue em: https://aistudio.google.com/apikey
+# É gratuito para uso básico (até 1500 requisições/dia no plano free)
+GEMINI_API_KEY=AIza...
+
 # ====== STRIPE (PAGAMENTOS) ======
 
 # Chave secreta do Stripe (começa com sk_test_ ou sk_live_)
