--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@whiskeysockets/baileys": "^6.7.21",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.6.0",
