--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
